# model-drift

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml  list-models.yml  pages.yml  track.yml
dashboard/: index.html  metrics-bootstrap-2026-07-18.json  metrics.json  narrative.json  notes.json
docs/: a-rate-limit-not-a-regression.md
modeldrift/: __init__.py  identity.py  models.json  narrative.py  providers.py  report.py  run.py  suite.py
tests/: test_identity.py  test_narrative.py  test_probe.py  test_providers.py  test_registry_sync.py  test_report.py  test_suite.py
